networking/ingress-nginx/kurl-externalservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: knime
spec:
  type: ExternalName
  externalName: registry.kurl.svc.cluster.local
