networking/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: business-hub-minio
  namespace: knime
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    ## Set force ssl redirect to true only if TLS is enabled at, or in front of, Nginx.
    #nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    ## Set proxy buffering values as needed. Recommended default values given here.
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    ## Set proxy body size and timeouts values based on expected workloads.
    ## Example recommended values given here.
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    haproxy.router.openshift.io/timeout: "1800"
spec:
  ingressClassName: <ingressclass>
  ## The tls block needs additional configuration if cert-manager or similar
  ## is used to create and bind certificates in the cluster to specific ingress rules.
  #tls:
  #- hosts:
  #    - storage.<baseurl>
  #  secretName: <cert-secret-name>
  rules:
    - host: storage.<baseurl>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: business-hub-keycloak
  namespace: knime
  annotations:
    ## redirect to /auth/ if / is called
    ## ending slash is important, see https://github.com/aerogear/keycloak-metrics-spi/issues/190
    nginx.ingress.kubernetes.io/app-root: "/auth/"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    # Set force ssl redirect to true only if TLS is enabled at, or in front of, Nginx.
    #nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    ## Set proxy buffering values as needed. Recommended default values given here.
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    ## Set proxy body size and timeouts values based on expected workloads.
    ## Example recommended values given here.
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    haproxy.router.openshift.io/timeout: "1800"
spec:
  ingressClassName: <ingressclass>
  ## The tls block needs additional configuration if cert-manager or similar
  ## is used to create and bind certificates in the cluster to specific ingress rules.
  #tls:
  #- hosts:
  #    - auth.<baseurl>
  #  secretName: <cert-secret-name>
  rules:
    - host: auth.<baseurl>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: knime-keycloak-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: business-hub-hub
  namespace: knime
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    # Set force ssl redirect to true only if TLS is enabled at, or in front of, Nginx.
    #nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    ## Set proxy buffering values as needed. Recommended default values given here.
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    ## Set proxy body size and timeouts values based on expected workloads.
    ## Example recommended values given here.
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    haproxy.router.openshift.io/timeout: "1800"
spec:
  ingressClassName: <ingressclass>
  ## The tls block needs additional configuration if cert-manager or similar
  ## is used to create and bind certificates in the cluster to specific ingress rules.
  #tls:
  #- hosts:
  #    - <baseurl>
  #  secretName: <cert-secret-name>
  #- hosts:
  #    - api.<baseurl>
  #  secretName: <cert-secret-name>
  #- hosts:
  #    - ws.<baseurl>
  #  secretName: <cert-secret-name>
  rules:
    - host: <baseurl>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 443
    - host: api.<baseurl>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 443
    - host: apps.<baseurl>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 443
    - host: ws.<baseurl>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 443
